@@ -228,6 +228,7 @@ public class TestHttpServerCipher
                 ImmutableSet.of(),
                 false,
                 false,
+                false,
                 ClientCertificate.NONE,
                 new RequestStats(),
                 new NullEventClient(),
