@@ -1,0 +1,10 @@
+package io.airlift.http.server.testing;
+
+public class TestTestingHttpServerWithCaseSensitiveHeaderCache
+        extends AbstractTestTestingHttpServer
+{
+    TestTestingHttpServerWithCaseSensitiveHeaderCache()
+    {
+        super(false, false, true);
+    }
+}
